# time-research-coding

./: .gitmodules  CMakeLists.txt  README.md  answer_of_assignment1b.md
app/: CMakeLists.txt  main.cpp
config/: setup.ini  subscription.ini
docs/: framework.drawio
include/: cache.h  client.h  common.h  connection.h  consumer.h  demo.h  logger.h  restapi.h  scheduler.h  websocket.h
include/utils/: logger.h  parser.h  queue.h
src/: CMakeLists.txt  cache.cpp  client.cpp  connection.cpp  consumer.cpp  demo.cpp  logger.cpp  restapi.cpp  websocket.cpp
tests/: CMakeLists.txt  test_cache.cpp  test_connection.cpp  test_consumer.cpp  test_rest.cpp  test_ws.cpp
